[gd_scene load_steps=38 format=3 uid="uid://oiebyf2kpkhp"]

[ext_resource type="Texture2D" uid="uid://cr34u8xfvtgbl" path="res://Art/all/full tilemap.png" id="1_2taeg"]
[ext_resource type="Script" path="res://Scenes/Rooms/room.gd" id="1_u0pa5"]
[ext_resource type="Script" path="res://Scenes/Rooms/entrance_mode.gd" id="2_2djx2"]

[sub_resource type="Resource" id="Resource_3x6rf"]
script = ExtResource("2_2djx2")
alta = Vector2i(2, 7)
layer_index = 1
direction = Vector2i(0, 0)

[sub_resource type="Resource" id="Resource_6onga"]
script = ExtResource("2_2djx2")
alta = Vector2i(7, 4)
layer_index = 0
direction = Vector2i(0, 1)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_lhu3h"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_o16jg"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ifoow"]
polygon = PackedVector2Array(-6, -5, -4, -1.5, -0.5, -1, 3, -1.5, 5, -5, 5, 3, 3, 5.5, -0.5, 6, -4, 5, -6, 3)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_xcyy4"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_lgcvw"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_tn3n3"]
polygon = PackedVector2Array(-8, 1, 8, 1, 8, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_rwev0"]
polygon = PackedVector2Array(-8, -8, -4, -8, -3.5, -1, 8, 0, 8, 8, -8, 8)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_g4a0w"]
vertices = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_hlcs6"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_pbtrk"]
polygon = PackedVector2Array(-8, 1, 8, 1, 8, 8, -8, 8)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_sa73o"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_3gcmi"]
polygon = PackedVector2Array(-8, 0, 8, 0, 8, 8, -8, 8)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_l0rvj"]
vertices = PackedVector2Array(-8, -8, 8, -8, 8, -1.5, -8, -1.5)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, -1.5, -8, -1.5)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_dw13w"]
vertices = PackedVector2Array(-8, -8, -1, -8, -1, 8, -8, 8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, -1, -8, -1, 8, -8, 8)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_due1g"]
vertices = PackedVector2Array(-8, 0, 8, 0, 8, 8, -8, 8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, 0, 8, 0, 8, 8, -8, 8)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_cbh56"]
vertices = PackedVector2Array(-0.5, -8, 8, -8, 8, 8, -0.5, 8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-0.5, -8, 8, -8, 8, 8, -0.5, 8)])

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_xippb"]
polygon = PackedVector2Array(-8, 1, -5, 1, -5, 7.5, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_cpswn"]
polygon = PackedVector2Array(-8, -8, -3.5, -8, -4.5, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_1s4b3"]
polygon = PackedVector2Array(-8, -8, -4, -8, -4, 8, -8, 8)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_71u3d"]
vertices = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_y4w8v"]
polygon = PackedVector2Array(5, 0.5, 8, 0.5, 8, 8, 5, 8.5)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_qmlop"]
polygon = PackedVector2Array(4, -8, 8, -8, 8, 8, 4, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_7lruh"]
polygon = PackedVector2Array(3.5, -8, 8, -8, 8, 8, 4.5, 8)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_3rb4f"]
vertices = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_c563x"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ssmsb"]
polygon = PackedVector2Array(-8, 1, 8, 1, 8, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_6hce5"]
polygon = PackedVector2Array(3.5, -8, 8, -8, 8, 8, -8, 8, -8, 0.5, 3, -1)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_eo8u0"]
vertices = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_p7wij"]
polygon = PackedVector2Array(-8, 0, 8, -4.5, 8, 4.5, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_uw7yr"]
polygon = PackedVector2Array(-8, -4.5, 8, 0, 8, 8, -8, 5.5)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ekcvj"]
texture = ExtResource("1_2taeg")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
1:0/0 = 0
1:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_ifoow")
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_1/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_1/angular_velocity = 0.0
2:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_1/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_1/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_1/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_1/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_1/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_1/angular_velocity = 0.0
0:1/0 = 0
0:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_o16jg")
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_1/angular_velocity = 0.0
0:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_xcyy4")
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_1/angular_velocity = 0.0
1:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_1/angular_velocity = 0.0
2:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_g4a0w")
3:1/next_alternative_id = 6
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_1/angular_velocity = 0.0
3:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_g4a0w")
3:1/2 = 2
3:1/2/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/2/physics_layer_0/angular_velocity = 0.0
3:1/2/physics_layer_1/linear_velocity = Vector2(0, 0)
3:1/2/physics_layer_1/angular_velocity = 0.0
3:1/2/navigation_layer_0/polygon = SubResource("NavigationPolygon_l0rvj")
3:1/3 = 3
3:1/3/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/3/physics_layer_0/angular_velocity = 0.0
3:1/3/physics_layer_1/linear_velocity = Vector2(0, 0)
3:1/3/physics_layer_1/angular_velocity = 0.0
3:1/3/navigation_layer_0/polygon = SubResource("NavigationPolygon_dw13w")
3:1/4 = 4
3:1/4/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/4/physics_layer_0/angular_velocity = 0.0
3:1/4/physics_layer_1/linear_velocity = Vector2(0, 0)
3:1/4/physics_layer_1/angular_velocity = 0.0
3:1/4/navigation_layer_0/polygon = SubResource("NavigationPolygon_due1g")
3:1/5 = 5
3:1/5/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/5/physics_layer_0/angular_velocity = 0.0
3:1/5/physics_layer_1/linear_velocity = Vector2(0, 0)
3:1/5/physics_layer_1/angular_velocity = 0.0
3:1/5/navigation_layer_0/polygon = SubResource("NavigationPolygon_cbh56")
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_1/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_1/angular_velocity = 0.0
5:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_3rb4f")
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_1/angular_velocity = 0.0
6:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_eo8u0")
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_1/angular_velocity = 0.0
7:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_eo8u0")
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_1/angular_velocity = 0.0
8:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_eo8u0")
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_1/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_1/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_1/angular_velocity = 0.0
2:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_g4a0w")
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_1/angular_velocity = 0.0
3:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_g4a0w")
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_1/angular_velocity = 0.0
4:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_71u3d")
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_1/angular_velocity = 0.0
5:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_71u3d")
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_1/angular_velocity = 0.0
6:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_eo8u0")
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_1/angular_velocity = 0.0
8:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_eo8u0")
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_1/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_1/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_1/angular_velocity = 0.0
2:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_g4a0w")
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_1/angular_velocity = 0.0
3:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_g4a0w")
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_1/angular_velocity = 0.0
4:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_71u3d")
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_1/angular_velocity = 0.0
5:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_71u3d")
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_1/angular_velocity = 0.0
6:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_eo8u0")
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_1/angular_velocity = 0.0
8:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_eo8u0")
3:4/0 = 0
3:4/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_xippb")
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_1/angular_velocity = 0.0
4:4/0 = 0
4:4/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_y4w8v")
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0/physics_layer_1/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_1/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0/physics_layer_1/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_1/angular_velocity = 0.0
7:4/next_alternative_id = 5
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0/physics_layer_1/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_1/angular_velocity = 0.0
7:4/1 = 1
7:4/1/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/1/physics_layer_0/angular_velocity = 0.0
7:4/1/physics_layer_1/linear_velocity = Vector2(0, 0)
7:4/1/physics_layer_1/angular_velocity = 0.0
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0/physics_layer_1/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_1/angular_velocity = 0.0
3:5/0 = 0
3:5/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_cpswn")
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_1/angular_velocity = 0.0
4:5/0 = 0
4:5/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_qmlop")
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0/physics_layer_1/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_1/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0/physics_layer_1/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_1/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0/physics_layer_1/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_1/angular_velocity = 0.0
8:5/0 = 0
8:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:5/0/physics_layer_0/angular_velocity = 0.0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0/physics_layer_1/linear_velocity = Vector2(0, 0)
8:5/0/physics_layer_1/angular_velocity = 0.0
1:6/0 = 0
1:6/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_tn3n3")
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 3, 8, 3, 8, 8, -8, 8)
1:6/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_1/angular_velocity = 0.0
1:6/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_lgcvw")
2:6/0 = 0
2:6/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_pbtrk")
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 3, 8, 3, 8, 8, -8, 8)
2:6/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_1/angular_velocity = 0.0
2:6/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_hlcs6")
3:6/0 = 0
3:6/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_1s4b3")
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_1/angular_velocity = 0.0
4:6/0 = 0
4:6/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_7lruh")
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0/physics_layer_1/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_1/angular_velocity = 0.0
5:6/0 = 0
5:6/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_ssmsb")
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 3, 8, 3, 8, 8, -8, 8)
5:6/0/physics_layer_1/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_1/angular_velocity = 0.0
5:6/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c563x")
7:6/0 = 0
7:6/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_p7wij")
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0/physics_layer_1/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_1/angular_velocity = 0.0
8:6/0 = 0
8:6/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_uw7yr")
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0/physics_layer_1/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_1/angular_velocity = 0.0
1:7/0 = 0
1:7/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_rwev0")
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_1/angular_velocity = 0.0
2:7/0 = 0
2:7/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_3gcmi")
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 3, 8, 3, 8, 8, -8, 8)
2:7/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_1/angular_velocity = 0.0
2:7/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_sa73o")
5:7/0 = 0
5:7/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_6hce5")
5:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:7/0/physics_layer_0/angular_velocity = 0.0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:7/0/physics_layer_1/linear_velocity = Vector2(0, 0)
5:7/0/physics_layer_1/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_74sp3"]
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
physics_layer_1/collision_layer = 8
physics_layer_1/collision_mask = 0
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_ekcvj")

[node name="Room" type="Node2D"]
script = ExtResource("1_u0pa5")
entrance_models = Array[ExtResource("2_2djx2")]([SubResource("Resource_3x6rf"), SubResource("Resource_6onga")])

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_lhu3h")

[node name="TileMap" type="TileMap" parent="NavigationRegion2D"]
tile_set = SubResource("TileSet_74sp3")
format = 2
layer_0/name = "BG"
layer_1/name = "家具"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Main"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array()

[node name="Entrance" type="Node2D" parent="."]

[node name="Doors" type="Node2D" parent="."]

[node name="Traps" type="Node2D" parent="."]

[node name="EnemyPositions" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]

[connection signal="area_entered" from="PlayerDetector" to="." method="_on_player_detector_area_entered"]
